tests/ui/panic-handler/panic-handler-std.stderr
error: multiple implementations of `#[panic_handler]`
  --> $SRC_DIR/std/src/panicking.rs:LL:COL
   |
   = note: first implemented here in crate `std`
   |
  ::: $DIR/panic-handler-std.rs:10:1
   |
LL | fn panic(info: &PanicInfo) -> ! {
   | ------------------------------- also implemented here in crate `panic_handler_std`
   |
   = help: an "externally implementable item" can only have a single implementation in the final artifact. When multiple implementations are found, also in different crates, they conflict

error: aborting due to 1 previous error

